--- a/HTML form.html
+++ b/HTML form.html
@@ -104,5 +104,37 @@
   		<input type="reset" value="Back"/>
   	</center>
   	</form>
+	<br>
+	<body leftmargin="100px">
+		<form>
+			<fieldset>
+				<legend>Contact Details</legend>
+				<table width="100%" cellpadding="10px">
+					<tr>
+						<td>Mobile Number</td>
+						<td>
+							<input type="text" size="20/">
+						</td>
+						<td>Email Id</td>
+						<td>
+							<input type="text" size="20/">
+						</td>
+					</tr>
+					<tr>
+						<td>Address Line 1</td>
+						<td>
+							<input type="text" size="20/">
+						</td>
+						<td>Address Line 2</td>
+						<td>
+							<input type="text" size="20/">
+						</td>
+					</tr>
+				</table>
+			</fieldset>
+		</form>
+		
+	</body>
   </body>
+
 </html>
