--- a/HTML form.html
+++ b/HTML form.html
@@ -99,10 +99,7 @@
   	</fieldset>		
   	
   	<br/>
-  	<center>
-  		<input type="submit" value="Submit"/>
-  		<input type="reset" value="Back"/>
-  	</center>
+
   	</form>
 	<br>
 	<body leftmargin="100px">
@@ -113,25 +110,53 @@
 					<tr>
 						<td>Mobile Number</td>
 						<td>
-							<input type="text" size="20/">
+							<input type="number" size="20/">
 						</td>
 						<td>Email Id</td>
 						<td>
-							<input type="text" size="20/">
+							<input type="text" size="20"/>
 						</td>
 					</tr>
 					<tr>
 						<td>Address Line 1</td>
 						<td>
-							<input type="text" size="20/">
+							<input type="text" size="20"/>
 						</td>
 						<td>Address Line 2</td>
 						<td>
-							<input type="text" size="20/">
+							<input type="text" size="20"/>
+						</td>
+					</tr>
+					<tr>
+						<td>City</td>
+						<td>
+							<input type="text" size="20"/>
+						</td>
+						<td>State</td>
+						<td>
+							<select>
+								<option>--Select--</option>
+								<option>TamilNadu</option>
+								<option>Kerala</option>
+								<option>Karnataka</option>
+								<option>Andra</option>
+								<option>Others</option>
+							</select>
+						</td>
+					</tr>
+					<tr>
+						<td>Pincode</td>
+						<td>
+							<input type="number" size="20"/>
 						</td>
 					</tr>
 				</table>
 			</fieldset>
+			<br>
+			<center>
+				<input type="Submit" value="Submit"/>
+				<input type="Reset" value="Back"/>
+			</center>
 		</form>
 		
 	</body>
